# sacalo

./: .gitignore  Cargo.toml  README.md  example.txt  example.txt.cpr  example.txt.scl  example2.txt  example2.txt.cpr  result.txt  test  test2.result.txt  test2.txt.cpr
src/: huffman.rs  main.rs
