[package]
name = "sacalo"
version = "1.0.0"
edition = "2021"
authors = ["MyselfLeo"]
readme = "README.md"
repository = "https://github.com/MyselfLeo/sacalo"
license = "MPL-2.0"
description = "Shitty algorithm for compressing admittedly large objects"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.2.1", features = ["derive"] }